# aiworkflow

./: .env  .env.example  AGENT_REVIEW.md  CLAUDE.md  CONVENTIONS.md  IMPLEMENTATION_SUMMARY.md  P0_P1_FIX_REPORT.md  README.md  plan.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.trae/: plan.md
.trae/rules/: project_rules.md
config/: README.md  agents.yaml  cache.json  config.yaml  protocols.yaml
docs/: AGENT_CONFIG.md  FEEDBACK_LOOP.md  INTERACTIVE_WORKFLOW.md
examples/: interactive_workflow_example.py  workflow_feedback_example.py
src/: README.md  __init__.py  cli.py  exceptions.py  main.py
src/agents/: README.md  __init__.py  analyst.py  architect.py  base_agent.py  coder.py  debugger.py  processors.py  tester.py
src/api/: README.md  __init__.py  interactive_workflow_ws.py  routes.py  schemas.py  server.py
src/communication/: README.md  __init__.py  http_client.py  notification.py  websocket.py
src/core/: README.md  __init__.py  context.py  message.py  permission.py  workflow.py  workflow_conversation.py  workflow_interactive.py  workflow_with_feedback.py
src/protocols/: README.md  __init__.py  base.py  deepseek.py  (+3 more)
tests/: README.md  test_agents.py  test_api.py  test_cli.py  test_config.py  test_context.py  test_exceptions.py  test_file_tool.py  test_http_client.py  test_message.py  test_notification.py  test_permission.py  test_permission_config.py  test_processors.py  test_protocols.py  test_protocols_glm_qwen.py  test_tools.py  test_ui.py  test_workflow.py  test_workflow_conversation.py  test_workflow_feedback.py
(+20 files in other folders)
