[project]
name = "myagent"
version = "0.1.0"
description = "Multi-Agent System with Chinese LLM support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
